Closed Bug 1095474 Opened 11 years ago Closed 11 years ago

Intermittent /indexedDB/test/test_file_replace.html | application terminated with exit code 1

Categories

(Core :: Storage: IndexedDB, defect)

All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36
Tracking Status
firefox34 --- wontfix
firefox35 --- fixed
firefox36 --- fixed
firefox-esr31 --- unaffected

People

(Reporter: cbook, Assigned: janv)

References

()

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Ubuntu ASAN VM 12.04 x64 mozilla-central opt test mochitest-e10s-2 https://treeherder.mozilla.org/ui/logviewer.html#?job_id=598214&repo=mozilla-central 04:57:40 INFO - 1648 ERROR TEST-UNEXPECTED-FAIL | /tests/dom/indexedDB/test/test_file_replace.html | application terminated with exit code 1
Attached patch fixSplinter Review
Assignee: nobody → Jan.Varga
Status: NEW → ASSIGNED
Attachment #8520617 - Flags: review?(bent.mozilla)
Comment on attachment 8520617 [details] [diff] [review] fix Review of attachment 8520617 [details] [diff] [review]: ----------------------------------------------------------------- Thanks! ::: dom/indexedDB/FileInfo.cpp @@ +182,5 @@ > + IndexedDatabaseManager::FileMutex().AssertCurrentThreadOwns(); > + > + mDBRefCnt = 0; > + > + if (mRefCnt + mDBRefCnt + mSliceRefCnt > 0) { You just set mDBRefCnt to 0 so no need to add it here. Just do: if (mRefCnt || mSliceRefCnt) {
Attachment #8520617 - Flags: review?(bent.mozilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Does the underlying defect affect any older branches?
Flags: needinfo?(Jan.Varga)
Yes, it does. It goes far back to the release history. The fact that we now clear origins after each test and that we now have ASAN, revealed this defect.
Flags: needinfo?(Jan.Varga)
Please nominate this for at least Aurora uplift. Maybe beta too (not sure if it's severe enough to warrant landing just before the final beta goes to build, though).
Let's just focus on Aurora approval.
Comment on attachment 8520617 [details] [diff] [review] fix Approval Request Comment [Feature/regressing bug #]: Enable storing files in IndexedDB, bug 661877. [User impact if declined]: The browser can sometimes crash when an origin is being cleared and stored files are involved. [Describe test coverage new/current, TBPL]: Origins are cleared before and after each mochitest. [Risks and why]: The patch should be safe and can be easily reverted. [String/UUID change made/needed]: No string/UUID changes.
Attachment #8520617 - Flags: approval-mozilla-aurora?
Comment on attachment 8520617 [details] [diff] [review] fix Approving as it's a good crash fix - ni? Lawrence - since we're taking an extra week on Beta for 34 perhaps you might want this there as well?
Flags: needinfo?(lmandel)
Attachment #8520617 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
The overall crash rate for 34 is good so we don't need to take additional stability fixes in this release. Given that it is late in the cycle, I passed on this one for 34.
Flags: needinfo?(lmandel)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: