Bug 1095474 - Intermittent /indexedDB/test/test_file_replace.html | application terminated with exit code 1. r=bent, a=lsblakk